--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,3 @@
-open_model_zoo-2022.3.0/sources/open_model_zoo/demos/monodepth_demo/python/public/*
-open_model_zoo-2022.3.0/sources/open_model_zoo/demos/monodepth_demo/python/test_data/*
 open_model_zoo-2022.3.0/sources/open_model_zoo/demos/common/python/**/__pycache__/*
+open_model_zoo-2022.3.0/datasets/*
+open_model_zoo-2022.3.0/models/*
